--- a/style.css
+++ b/style.css
@@ -146,10 +146,10 @@ a {
 .cta {
     background-color: #3882F6;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    padding: 24px 128px;
-    margin: 96px;
+    padding: 24px 0;
+    margin: 96px 192px;
     border-radius: 8px;
 }
 
@@ -163,7 +163,6 @@ a {
     color: #E5E7EB;
     font-weight: 300;
     font-size: 16px;
-    padding-right: 128px;
 }
 
 .cta .sign-up {
